# Coyote-CIRCT

./: .gitignore  .gitmodules  README.md
hw/rtl/base/: user_logic.sv
hw/rtl/base/lpb/: top.sv
hw/std/base/: init_ip.tcl  loop_sequence.mlir  nested_diamond.mlir  user_logic.sv
hw/stream/custom_join/: query_r.mlir  query_s.mlir  user_logic.sv
hw/stream/custom_join/ext/: agg_pkg.sv  bpss_sender.sv  dist_slave.sv  distinct_hash.sv  distinct_top.sv  join_slave.sv  join_top.sv  lru_cache.sv
hw/stream/custom_join/ext/user/: user_arb.sv  user_bpss_rd.sv  user_credits_rd.sv
hw/stream/filter/: fast_slow.mlir
hw/stream/map/: tp.mlir  user_logic.sv
hw/stream/mem/: distinct.mlir  init_ip.tcl  user_logic.sv
hw/stream/mem/ext/: agg_pkg.sv  distinct_hash.sv  distinct_top.sv  lru_cache.sv  tabulation_table.svh
hw/stream/reduction/: init_ip.tcl  user_logic.sv
hw/stream/tp-map/: init_ip.tcl
hw/stream/tp-map/ext/: query_slave.sv
scripts/: build_circt_stream.sh  compile_all.sh  create_hw.sh  create_sw.sh  export_circt.sh  export_std_loops.sh  export_std_nested.sh  export_stream.sh  package.tcl  replace.py
sw/: CMakeLists.txt
sw/base/: main.cpp
sw/query/: main.cpp
